ec2-legacy-tier/Terraform/webserver-security-groupt.tf
resource "aws_security_group" "webserver_sg" {
  description = "Control bastion inbound and outbound access"
  name        = "${local.prefix}-webserver"
  vpc_id      = aws_vpc.sandbox_vpc.id

  ingress {
    protocol    = "tcp"
    from_port   = 22
    to_port     = 22
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = "tcp"
    from_port   = 443
    to_port     = 443
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = local.common_tags
}
